syntax = "proto3";

package auth;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int32 status = 1;
    string message = 2;
    string token = 3;
}

message RegisterRequest {
    string email = 1;
    string fullname = 2;
    string password = 3;
    string roleName = 4;
}

message RegisterResponse {
    int32 status = 1;
    string message = 2;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int32 status = 1;
    string message = 2;
    string id = 3;
    string role = 4;
    repeated string permissions = 5;
}

service AuthService {
    rpc register (RegisterRequest) returns (RegisterResponse);
    rpc login (LoginRequest) returns (LoginResponse);
    rpc validate (ValidateRequest) returns (ValidateResponse);
}